--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -37,6 +37,7 @@
   );
 
   /* Sidebar */
+  /* 원본 내용
   --site-title-color: rgb(113, 113, 113);
   --site-subtitle-color: #717171;
   --sidebar-bg: #f6f8fa;
@@ -47,6 +48,18 @@
   --sidebar-btn-bg: white;
   --sidebar-btn-color: #8e8e8e;
   --avatar-border-color: white;
+  */
+  --site-title-color: #fff;
+  --site-subtitle-color: #fff;
+  --sidebar-bg: #f6f8fa;
+  --sidebar-border-color: #efefef;
+  --sidebar-muted-color: #1d1d1d;
+  --sidebar-active-color: #1d1d1d;
+  --sidebar-hover-bg: rgb(223, 233, 241, 0.64);
+  --sidebar-btn-bg: white;
+  --sidebar-btn-color: gray;
+  --avatar-border-color: white;
+
 
   /* Topbar */
   --topbar-bg: rgb(255, 255, 255, 0.7);
