--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -691,10 +691,10 @@ $btn-mb: 0.5rem;
   /* 원본 내용
   background: var(--sidebar-bg);
   */
-  background: url('	https://i.pinimg.com/originals/ae/7c/27/ae7c27fa492c48187dc45aa222069d93.png');
+  background: url('https://github.com/user-attachments/assets/6ac58368-22b0-4974-be5f-84f03ad1ca09');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 70%;
+  background-position: 90%;
   border-right: 1px solid var(--sidebar-border-color);
 
   /* Hide scrollbar for IE, Edge and Firefox */
