--- a/_sass/colors/typography-light.scss
+++ b/_sass/colors/typography-light.scss
@@ -53,11 +53,11 @@
   --site-subtitle-color: #fff;
   --sidebar-bg: #f6f8fa;
   --sidebar-border-color: #efefef;
-  --sidebar-muted-color: #1d1d1d;
+  --sidebar-muted-color: #fff;
   --sidebar-active-color: #1d1d1d;
   --sidebar-hover-bg: rgb(223, 233, 241, 0.64);
   --sidebar-btn-bg: white;
-  --sidebar-btn-color: gray;
+  --sidebar-btn-color: #000000;
   --avatar-border-color: white;
 
 
