style: dark mode sidebar

--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -34,6 +34,7 @@
   );
 
   /* Sidebar */
+  /* 원본 내용
   --site-title-color: #717070;
   --site-subtitle-color: #868686;
   --sidebar-bg: #1e1e1e;
@@ -44,6 +45,17 @@
   --sidebar-btn-bg: #232328;
   --sidebar-btn-color: #787878;
   --avatar-border-color: rgb(206, 206, 206, 0.9);
+  */
+  --site-title-color: #fff;
+  --site-subtitle-color: #fff;
+  --sidebar-bg: #f6f8fa;
+  --sidebar-border-color: #292929;
+  --sidebar-muted-color: #fff;
+  --sidebar-active-color: #1d1d1d;
+  --sidebar-hover-bg: rgb(223, 233, 241, 0.64);
+  --sidebar-btn-bg: white;
+  --sidebar-btn-color: #000000;
+  --avatar-border-color: white;
 
   /* Topbar */
   --topbar-bg: rgb(27, 27, 30, 0.64);
