style: sidebar image upload

--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -691,7 +691,7 @@ $btn-mb: 0.5rem;
   /* 원본 내용
   background: var(--sidebar-bg);
   */
-  background: url('https://github.com/user-attachments/assets/6ac58368-22b0-4974-be5f-84f03ad1ca09');
+  background: url('/assets/img/sidebar-bg.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 90%;
